lexical-core/ffi/lexical_core.h

// Features must be enabled through the following macro definitions:
//  1. HAVE_RADIX
//  1. HAVE_ROUNDING

// CONFIG
// ------

extern int32_t get_nan_string_ffi(uint8_t** ptr, size_t* size);
extern int32_t set_nan_string_ffi(uint8_t* ptr, size_t size);
extern int32_t get_inf_string_ffi(uint8_t** ptr, size_t* size);
extern int32_t set_inf_string_ffi(uint8_t* ptr, size_t size);
extern int32_t get_infinity_string_ffi(uint8_t** ptr, size_t* size);
extern int32_t set_infinity_string_ffi(uint8_t* ptr, size_t size);
// MUTABLE GLOBALS
extern uint8_t EXPONENT_DEFAULT_CHAR;
    extern uint8_t EXPONENT_BACKUP_CHAR;
    extern int32_t FLOAT_ROUNDING;
// CONSTANTS
extern const size_t MAX_I8_SIZE_FFI;
extern const size_t MAX_I16_SIZE_FFI;
extern const size_t MAX_I32_SIZE_FFI;
extern const size_t MAX_I64_SIZE_FFI;
extern const size_t MAX_ISIZE_SIZE_FFI;
extern const size_t MAX_U8_SIZE_FFI;
extern const size_t MAX_U16_SIZE_FFI;
extern const size_t MAX_U32_SIZE_FFI;
extern const size_t MAX_U64_SIZE_FFI;
extern const size_t MAX_USIZE_SIZE_FFI;
extern const size_t MAX_F32_SIZE_FFI;
extern const size_t MAX_F64_SIZE_FFI;
extern const size_t MAX_I8_SIZE_BASE10_FFI;
extern const size_t MAX_I16_SIZE_BASE10_FFI;
extern const size_t MAX_I32_SIZE_BASE10_FFI;
extern const size_t MAX_I64_SIZE_BASE10_FFI;
extern const size_t MAX_ISIZE_SIZE_BASE10_FFI;
extern const size_t MAX_U8_SIZE_BASE10_FFI;
extern const size_t MAX_U16_SIZE_BASE10_FFI;
extern const size_t MAX_U32_SIZE_BASE10_FFI;
extern const size_t MAX_U64_SIZE_BASE10_FFI;
extern const size_t MAX_USIZE_SIZE_BASE10_FFI;
extern const size_t MAX_F32_SIZE_BASE10_FFI;
extern const size_t MAX_F64_SIZE_BASE10_FFI;
extern const size_t BUFFER_SIZE_FFI;
// TYPES
// -----

// ERROR

// Error code, indicating failure type.
enum ErrorCode {
    // Integral overflow occurred during numeric parsing.
    Overflow = -1,
    // Integral underflow occurred during numeric parsing.
    Underflow = -2,
    // Invalid digit found before string termination.
    InvalidDigit = -3,
    // Empty byte array found.
    Empty = -4,
    // Empty fraction found.
    EmptyFraction = -5,
    // Empty exponent found.
    EmptyExponent = -6,
};
// C-compatible error for FFI.
struct Error {
    int32_t code;
    size_t index;
};
extern bool error_is_overflow(Error error);
extern bool error_is_underflow(Error error);
extern bool error_is_invalid_digit(Error error);
extern bool error_is_empty(Error error);
extern bool error_is_empty_fraction(Error error);
extern bool error_is_empty_exponent(Error error);
// UNIONS

union UnionI8 {
    int8_t value;
    Error error;
};
union UnionI16 {
    int16_t value;
    Error error;
};
union UnionI32 {
    int32_t value;
    Error error;
};
union UnionI64 {
    int64_t value;
    Error error;
};
union UnionIsize {
    // Assume ptrdiff_t and size_t are the same size.
    ptrdiff_t value;
    Error error;
};
union UnionU8 {
    uint8_t value;
    Error error;
};
union UnionU16 {
    uint16_t value;
    Error error;
};
union UnionU32 {
    uint32_t value;
    Error error;
};
union UnionU64 {
    uint64_t value;
    Error error;
};
union UnionUsize {
    size_t value;
    Error error;
};
union UnionF32 {
    float value;
    Error error;
};
union UnionF64 {
    double value;
    Error error;
};
// RESULTS

struct ResultI8 {
    uint32_t tag;
    UnionI8 data;
};
extern bool i8_result_ffi_is_ok(ResultI8 result);
extern bool i8_result_ffi_is_err(ResultI8 result);
extern int8_t i8_result_ffi_ok(ResultI8 result);
extern Error i8_result_ffi_err(ResultI8 result);
struct ResultI16 {
    uint32_t tag;
    UnionI16 data;
};
extern bool i16_result_ffi_is_ok(ResultI16 result);
extern bool i16_result_ffi_is_err(ResultI16 result);
extern int16_t i16_result_ffi_ok(ResultI16 result);
extern Error i16_result_ffi_err(ResultI16 result);
struct ResultI32 {
    uint32_t tag;
    UnionI32 data;
};
extern bool i32_result_ffi_is_ok(ResultI32 result);
extern bool i32_result_ffi_is_err(ResultI32 result);
extern int32_t i32_result_ffi_ok(ResultI32 result);
extern Error i32_result_ffi_err(ResultI32 result);
struct ResultI64 {
    uint32_t tag;
    UnionI64 data;
};
extern bool i64_result_ffi_is_ok(ResultI64 result);
extern bool i64_result_ffi_is_err(ResultI64 result);
extern int64_t i64_result_ffi_ok(ResultI64 result);
extern Error i64_result_ffi_err(ResultI64 result);