lexical-core/ffi/lexical_core.py

"""
    lexical_core
    ============

    Access lexical-core functionality from Python.

    License
    -------

    This is free and unencumbered software released into the public domain.

    Anyone is free to copy, modify, publish, use, compile, sell, or
    distribute this software, either in source code form or as a compiled
    binary, for any purpose, commercial or non-commercial, and by any
    means.

    In jurisdictions that recognize copyright laws, the author or authors
    of this software dedicate any and all copyright interest in the
    software to the public domain. We make this dedication for the benefit
    of the public at large and to the detriment of our heirs and
    successors. We intend this dedication to be an overt act of
    relinquishment in perpetuity of all present and future rights to this
    software under copyright law.

    THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND,
    EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF
    MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.
    IN NO EVENT SHALL THE AUTHORS BE LIABLE FOR ANY CLAIM, DAMAGES OR
    OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
    ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
    OTHER DEALINGS IN THE SOFTWARE.

    For more information, please refer to <http://unlicense.org/>
"""

from ctypes.util import find_library
from ctypes import *
import contextlib
import enum
import os
import sys

# LOADING
# -------

# Identify the shared lib suffix on the platform.
# Allow the user to specify `SHARED_LIBRARY_SUFFIX` in the shell
# environment to override the default.
if 'SHARED_LIBRARY_SUFFIX' in os.environ:
    SHARED_LIBRARY_SUFFIX = os.environ['SHARED_LIBRARY_SUFFIX']
elif os.name == 'nt':
    SHARED_LIBRARY_SUFFIX = 'dll'
elif sys.platform == 'darwin':
    # Path can be either.
    SHARED_LIBRARY_SUFFIX = 'dylib,so'
else:
    SHARED_LIBRARY_SUFFIX = 'so'

# Wrap the dynlib. Find's the path to an installed lexical-core library,
# otherwise, assumes it's in the working directory.
# You can modify this code to change how liblexical_core is loaded for
# your application.
PATH = find_library('lexical_core')
LIB = None
if PATH is not None:
    LIB = CDLL(PATH)
else:
    for suffix in SHARED_LIBRARY_SUFFIX.split(','):
        path = os.path.join(os.getcwd(), f'liblexical_core.{suffix}')
        with contextlib.suppress(OSError):
            LIB = CDLL(path)
if LIB is None:
    raise OSError("Unavailable to find path to the liblexical_core shared library.")

# CONFIG
# ------

LIB.get_nan_string_ffi.restype = c_int
LIB.set_nan_string_ffi.restype = c_int
LIB.get_inf_string_ffi.restype = c_int
LIB.set_inf_string_ffi.restype = c_int
LIB.get_infinity_string_ffi.restype = c_int
LIB.set_infinity_string_ffi.restype = c_int

def _get_string(name):
    cb = getattr(LIB, name)
    ptr = POINTER(c_ubyte)()
    size = c_size_t()
    if cb(byref(ptr), byref(size)) != 0:
        raise OSError(f"Unexpected error in lexical_core.{name}")
    return string_at(ptr, size.value)

def _set_string(name, data):
    if not isinstance(data, (bytes, bytearray)):
        raise TypeError("Must set string from bytes.")
    cb = getattr(LIB, name)
    ptr = cast(data, POINTER(c_ubyte))
    size = c_size_t(len(data))
    if cb(ptr, size) != 0:
        raise OSError(f"Unexpected error in lexical_core.{name}")

def get_nan_string():
    '''Get string representation of Not a Number as a byte slice.'''
    return _get_string('get_nan_string_ffi')

def set_nan_string(data):
    '''Set string representation of Not a Number from a byte slice.'''
    return _set_string('set_nan_string_ffi', data)

def get_inf_string():
    '''Get the short representation of an Infinity literal as a byte slice.'''
    return _get_string('get_inf_string_ffi')

def set_inf_string(data):
    '''Set the short representation of an Infinity literal from a byte slice.'''
    return _set_string('set_inf_string_ffi', data)

def get_infinity_string():
    '''Get the long representation of an Infinity literal as a byte slice.'''
    return _get_string('get_infinity_string_ffi')

def set_infinity_string(data):
    '''Set the long representation of an Infinity literal from a byte slice.'''
    return _set_string('set_infinity_string_ffi', data)


# GLOBALS
# -------

# MUTABLE GLOBALS
EXPONENT_DEFAULT_CHAR = c_ubyte.in_dll(LIB, "EXPONENT_DEFAULT_CHAR")

with contextlib.suppress(ValueError):
    # May or may not have been compiled with `radix` support, so allow
    # any of these symbols to fail.
    EXPONENT_BACKUP_CHAR = c_ubyte.in_dll(LIB, "EXPONENT_BACKUP_CHAR")

with contextlib.suppress(ValueError):
    # May or may not have been compiled with `rounding` support, so allow
    # any of these symbols to fail.
    FLOAT_ROUNDING = c_int.in_dll(LIB, 'FLOAT_ROUNDING')

# CONSTANTS
MAX_I8_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_I8_SIZE_FFI").value
MAX_I16_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_I16_SIZE_FFI").value
MAX_I32_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_I32_SIZE_FFI").value
MAX_I64_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_I64_SIZE_FFI").value
MAX_ISIZE_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_ISIZE_SIZE_FFI").value
MAX_U8_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_U8_SIZE_FFI").value
MAX_U16_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_U16_SIZE_FFI").value
MAX_U32_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_U32_SIZE_FFI").value
MAX_U64_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_U64_SIZE_FFI").value
MAX_USIZE_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_USIZE_SIZE_FFI").value
MAX_F32_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_F32_SIZE_FFI").value
MAX_F64_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_F64_SIZE_FFI").value

MAX_I8_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_I8_SIZE_BASE10_FFI").value
MAX_I16_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_I16_SIZE_BASE10_FFI").value
MAX_I32_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_I32_SIZE_BASE10_FFI").value
MAX_I64_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_I64_SIZE_BASE10_FFI").value
MAX_ISIZE_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_ISIZE_SIZE_BASE10_FFI").value
MAX_U8_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_U8_SIZE_BASE10_FFI").value
MAX_U16_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_U16_SIZE_BASE10_FFI").value
MAX_U32_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_U32_SIZE_BASE10_FFI").value
MAX_U64_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_U64_SIZE_BASE10_FFI").value
MAX_USIZE_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_USIZE_SIZE_BASE10_FFI").value
MAX_F32_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_F32_SIZE_BASE10_FFI").value
MAX_F64_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_F64_SIZE_BASE10_FFI").value

BUFFER_SIZE_FFI = c_size_t.in_dll(LIB, "BUFFER_SIZE_FFI").value

with contextlib.suppress(ValueError):
    # May or may not have been compiled with `has_i128` support, so allow
    # any of these symbols to fail.
    MAX_I128_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_I128_SIZE_FFI").value
    MAX_U128_SIZE_FFI = c_size_t.in_dll(LIB, "MAX_U128_SIZE_FFI").value
    MAX_I128_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_I128_SIZE_BASE10_FFI").value
    MAX_U128_SIZE_BASE10_FFI = c_size_t.in_dll(LIB, "MAX_U128_SIZE_BASE10_FFI").value

# TYPES
# -----

# ERROR
LIB.error_is_overflow.restype = c_bool
LIB.error_is_underflow.restype = c_bool
LIB.error_is_invalid_digit.restype = c_bool
LIB.error_is_empty.restype = c_bool
LIB.error_is_empty_fraction.restype = c_bool
LIB.error_is_empty_exponent.restype = c_bool

class ErrorCode(enum.Enum):
    '''Error code, indicating failure type.'''

    Overflow = -1
    Underflow = -2
    InvalidDigit = -3
    Empty = -4
    EmptyFraction = -5
    EmptyExponent = -6

class Error(Structure):
    '''C-compatible error for FFI.'''

    _fields_ = [
        ("_code", c_int),
        ("index", c_size_t)
    ]

    @property
    def code(self):
        return ErrorCode(self._code)

    @code.setter
    def code(self, value):
        if not isinstance(value, ErrorCode):
            raise TypeError('Expected ErrorCode')
        self._code = value.value

    def is_overflow(self):
        return LIB.error_is_overflow(self).value

    def is_underflow(self):
        return LIB.error_is_underflow(self).value

    def is_invalid_digit(self):
        return LIB.error_is_invalid_digit(self).value

    def is_empty(self):
        return LIB.error_is_empty(self).value

    def is_empty_fraction(self):
        return LIB.error_is_empty_fraction(self).value

    def is_empty_exponent(self):
        return LIB.error_is_empty_exponent(self).value

# UNIONS

class UnionI8(Union):
    _fields_ = [
        ("value", c_int8),
        ("error", Error)
    ]

class UnionI16(Union):
    _fields_ = [
        ("value", c_int16),
        ("error", Error)
    ]

class UnionI32(Union):
    _fields_ = [
        ("value", c_int32),
        ("error", Error)
    ]

class UnionI64(Union):
    _fields_ = [
        ("value", c_int64),
        ("error", Error)
    ]

class UnionIsize(Union):
    _fields_ = [
        ("value", c_ssize_t),
        ("error", Error)
    ]

class UnionU8(Union):
    _fields_ = [
        ("value", c_uint8),
        ("error", Error)
    ]

class UnionU16(Union):
    _fields_ = [
        ("value", c_uint16),
        ("error", Error)
    ]

class UnionU32(Union):
    _fields_ = [
        ("value", c_uint32),
        ("error", Error)
    ]

class UnionU64(Union):
    _fields_ = [
        ("value", c_uint64),
        ("error", Error)
    ]

class UnionUsize(Union):
    _fields_ = [
        ("value", c_size_t),
        ("error", Error)
    ]

class UnionF32(Union):
    _fields_ = [
        ("value", c_float),
        ("error", Error)
    ]

class UnionF64(Union):
    _fields_ = [
        ("value", c_float),
        ("error", Error)
    ]

# RESULTS

LIB.i8_result_ffi_is_ok.restype = c_bool
LIB.i8_result_ffi_is_err.restype = c_bool
LIB.i8_result_ffi_ok.restype = c_int8
LIB.i8_result_ffi_err.restype = Error

class ResultI8(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionI8)
    ]

    def is_ok(self):
        return LIB.i8_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.i8_result_ffi_is_err(self)

    def ok(self):
        return LIB.i8_result_ffi_ok(self)

    def err(self):
        return LIB.i8_result_ffi_err(self)

LIB.i16_result_ffi_is_ok.restype = c_bool
LIB.i16_result_ffi_is_err.restype = c_bool
LIB.i16_result_ffi_ok.restype = c_int16
LIB.i16_result_ffi_err.restype = Error

class ResultI16(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionI16)
    ]

    def is_ok(self):
        return LIB.i16_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.i16_result_ffi_is_err(self)

    def ok(self):
        return LIB.i16_result_ffi_ok(self)

    def err(self):
        return LIB.i16_result_ffi_err(self)

LIB.i32_result_ffi_is_ok.restype = c_bool
LIB.i32_result_ffi_is_err.restype = c_bool
LIB.i32_result_ffi_ok.restype = c_int32
LIB.i32_result_ffi_err.restype = Error

class ResultI32(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionI32)
    ]

    def is_ok(self):
        return LIB.i32_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.i32_result_ffi_is_err(self)

    def ok(self):
        return LIB.i32_result_ffi_ok(self)

    def err(self):
        return LIB.i32_result_ffi_err(self)

LIB.i64_result_ffi_is_ok.restype = c_bool
LIB.i64_result_ffi_is_err.restype = c_bool
LIB.i64_result_ffi_ok.restype = c_int64
LIB.i64_result_ffi_err.restype = Error

class ResultI64(Structure):
    _fields_ = [
        ("tag", c_uint),
        ("data", UnionI64)
    ]

    def is_ok(self):
        return LIB.i64_result_ffi_is_ok(self)

    def is_err(self):
        return LIB.i64_result_ffi_is_err(self)

    def ok(self):
        return LIB.i64_result_ffi_ok(self)

    def err(self):
        return LIB.i64_result_ffi_err(self)
